Mention to Artificial General Intelligence added

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -527,7 +527,7 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	\end{itemize}
 \end{frame}
 
-\section{AI applications}
+\section{Building Terminator}
 
 %\subsection{2001: A Space Odyssey}
 
@@ -577,9 +577,9 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 %	\end{columns}
 %\end{frame}
 
-\subsection{Building Terminator}
+\subsection{Introduction}
 
-\begin{frame}{AI applications}{Building Terminator (I)}
+\begin{frame}{Building Terminator (I)}
 	\begin{columns}
  	   \column{.70\textwidth}
 			Terminator
@@ -595,7 +595,7 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	\end{columns}
 \end{frame}
 
-\begin{frame}{AI applications}{Building Terminator (II)}
+\begin{frame}{Building Terminator (II)}
 	\begin{columns}
  	   \column{.05\textwidth}
  	   \column{.65\textwidth}
@@ -624,8 +624,7 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	\end{columns}
 \end{frame}
 
-\subsection{Building Terminator}
-\begin{frame}{AI applications}{Building Terminator (II)}
+\begin{frame}{Building Terminator (III)}
 	Imagine we want to build T-800 ... What would we need?
 	\begin{itemize}
 		\item Fast hardware?
@@ -638,11 +637,11 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	Let's analyze them
 \end{frame}
 
-\begin{frame}{AI applications}{Building Terminator (III)}
+\begin{frame}{AI applications}{Building Terminator (IV)}
     \begin{table}
     \centering
     \begin{tabular}{l|l}
-    \textsc{Human capability} & \textsc{AI field} \\\hline
+    \textsc{Human skill} & \textsc{AI field} \\\hline
     Motion control & Robotics \\
     Image reconition & Computer vision \\
     Speech understanding & Natural Language Processing \\
@@ -657,8 +656,8 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
     And, of course, we need some hardware
 \end{frame}
 
-
-\begin{frame}{AI applications}{Building Terminator: Hardware (I)}
+\subsection{Hardware}
+\begin{frame}{Building Terminator}{Hardware (I)}
 	How complicated is our brain?
 	\begin{itemize}
 		\item A neuron is the basic information processing unit
@@ -673,7 +672,7 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{AI applications}{Building Terminator: Hardware (II)}
+\begin{frame}{Building Terminator}{Hardware (II)}
 	\begin{columns}
  	   \column{.60\textwidth}
 	\begin{center}
@@ -692,7 +691,9 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	\end{columns}
 \end{frame}
 
-\begin{frame}{AI applications}{Building Terminator: Chess (I)}
+\subsection{Chess}
+
+\begin{frame}{Building Terminator}{Chess (I)}
 	Chess is a classic benchmark in AI
 	\begin{itemize}
 		\item AI techniques: Classic search
@@ -710,7 +711,7 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	Conclusion: YES
 \end{frame}
 
-\begin{frame}{AI applications}{Building Terminator: Chess (II)}
+\begin{frame}{Building Terminator}{Chess (II)}
 	\vspace{-2cm}
 
 	\begin{center}
@@ -742,7 +743,8 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	\end{columns}
 \end{frame}
 
-\begin{frame}{AI applications}{Building Terminator: Speech synthesis}
+\subsection{Speech synthesis}
+\begin{frame}{Building Terminator}{Speech synthesis}
 	Three different problems to make computers talk
 	\begin{itemize}
 		\item \href{https://youtu.be/SYJCWStejSc?t=65}{(Speech synthesis)}, speech recognition and speech understanding
@@ -765,7 +767,8 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{AI applications}{Building Terminator: Speech recognition}
+\subsection{Speech recognition}
+\begin{frame}{Building Terminator}{Speech recognition}
 \footnotesize{
 	Speech recognition: Map sounds into a list of words
 	\begin{itemize}
@@ -788,6 +791,8 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	Conclusion: YES for restricted problems, NO for normal speech
 }
 \end{frame}
+
+\subsection{Speech undestanding}
 
 \begin{frame}{AI applications}{Building Terminator: Speech understanding}
 	Speech understanding: What is the meaning of the speech?
@@ -812,7 +817,9 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	Conclusion: NO
 \end{frame}
 
-\begin{frame}{AI applications}{Building Terminator: Image recognition}
+\subsection{Image recognition}
+
+\begin{frame}{Building Terminator}{Image recognition}
     \begin{table}
 	\begin{tabular}{cc}
 		\includegraphics[width=0.5\linewidth]{figs/segmentation.jpeg} & \includegraphics[width=0.4\linewidth]{figs/detection.png} \\ 
@@ -835,7 +842,9 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
     }
 \end{frame}
 
-\begin{frame}{AI applications}{Building Terminator: Learning (I)}
+\subsection{Learning}
+
+\begin{frame}{Building Terminator}{Learning (I)}
 	\begin{columns}
  	   \column{.02\textwidth}
  	   \column{.60\textwidth}
@@ -862,7 +871,7 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	
 \end{frame}
 
-\begin{frame}{AI applications}{Building Terminator: Learning (II)}
+\begin{frame}{Building Terminator}{Learning (II)}
 	Another discipline: Expert systems
 	\begin{itemize}
 		\item It maintains a knowledge base, facts base and interence engine
@@ -890,34 +899,63 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 %	Conclusion: NO for general recognition, YES for restricted domains
 %\end{frame}
 
-\begin{frame}{AI applications}{Building Terminator: Plan and make decisions}
+\subsection{Plan and make decisions}
+
+\begin{frame}{Building Terminator}{Plan and make decisions}
 	Intelligence involves solving problems, making decisions and plans
 	\begin{itemize}
 		\item Plan: Sequence of actions to achieve a goal
 		\item Techniques: Search
 	\end{itemize}
+
 	Example: You want to plan a trip to Caribe
 	\begin{itemize}
 		\item Decide on dates, flights, airport transport, hotel, fit timetables, ...
 	\end{itemize}
+
 	It is a hard problem
 	\begin{itemize}
 		\item World is not predecible (flights can be delayed)
 		\item Huge number of details, common sense constrains decisions
 	\end{itemize}
+
 	Life-and-death decisions: \href{https://www.youtube.com/watch?v=ixIoDYVfKA0}{(Video)}
 
 	Conclusion: NO for real-world planning, YES for restricted domains
 \end{frame}
 
-\subsection{Disciplines}
+\subsection{General Artificial Intelligence}
+
+\begin{frame}{Building Terminator}{Artificial General Intelligence}
+	\begin{center}
+		\includegraphics[width=0.3\linewidth]{figs/skynet.jpg}\\
+    \end{center}
+
+    State-of-the art AI is competitive in very restricted domains	
+	\begin{itemize}
+		\item How AI generalizes to broad domains? 
+        \item \alert{Artificial General Intelligence}
+        \item State-of-the-art uses Deep Reinforment Learning (neural networks)
+	\end{itemize}
+
+    General AI is a controversial field
+    \begin{itemize}
+        \item Eventually, we could develop an \textit{intelligence explosion} ...
+        \item ... and a \textit{superintelligence} ...
+        \item ... or even a \textit{strong AI}
+    \end{itemize}
+\end{frame}
+
+\section{AI applications}
+\subsection{Disciplines and techniques}
+
 \begin{frame}{AI applications}{Disciplines and techniques}
 	\vspace{-0.4cm}
 	\begin{center}
 		\textbf{AI disciplines techniques}
 	\end{center}
 	\begin{columns}
- 	   \column{.50\textwidth}
+	   \column{.50\textwidth}
 	   		\begin{block}{Disciplines}
 			\begin{itemize}
 			\item Automatic reasoning
@@ -932,7 +970,7 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 			\item ...
 			\end{itemize}
 			\end{block}
- 	   \column{.50\textwidth}
+	   \column{.50\textwidth}
 	   		\begin{block}{Techniques}
 			\begin{itemize}
 			\item Neural networks
@@ -985,37 +1023,37 @@ myself. Like on the question ‘Do you have watch’ – never tell time, but an
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{AI applications}{Application domains (III)}
-	\begin{itemize}
-		\item Applied Problems 
-		\item Pattern Recognition 
-		\item Artificial Creativity 
-		\item Machine Vision 
-		\item Automatic diagnosis 
-		\item Game Theory 
-		\item Intelligent games and bots 
-		\item Language Processing 
-		\item Planning and scheduling 
-		\item Nonlinear control 
-		\item Learning …
-	\end{itemize}	
-\end{frame}
+%\begin{frame}{AI applications}{Application domains (III)}
+%	\begin{itemize}
+%		\item Applied Problems 
+%		\item Pattern Recognition 
+%		\item Artificial Creativity 
+%		\item Machine Vision 
+%		\item Automatic diagnosis 
+%		\item Game Theory 
+%		\item Intelligent games and bots 
+%		\item Language Processing 
+%		\item Planning and scheduling 
+%		\item Nonlinear control 
+%		\item Learning …
+%	\end{itemize}	
+%\end{frame}
 
-\begin{frame}{AI applications}{Application domains (IV)}
-	AI in Robotics
-	\begin{itemize}
-		\item \href{http://www.youtube.com/watch?v=gDvoe091tk4}{(Video Athlete)}
-		\item \href{https://www.youtube.com/watch?v=M8YjvHYbZ9w}{(Video Spot)}
-		\item \href{https://www.youtube.com/watch?v=rVlhMGQgDkY}{(Video Atlas)}
-		\item \href{https://www.youtube.com/watch?v=NhLi1LsNzno}{(Video ExoMars)}
-		\item \href{http://www.jpl.nasa.gov/news/phoenix/multimedia.php}{(MSL Photos)}
-%		\item \href{http://www.jpl.nasa.gov/news/phoenix/multimedia.php}{(Video MSL)}
-%		\item \href{http://www.youtube.com/watch?v=JI6F1qrsQb0}{(Video MER)}
-%		\item \href{http://www.youtube.com/watch?v=j72quVM7c9Y}{(Video Phoenix)}
-%		\item \href{http://www.youtube.com/watch?v=d1coV7XqE1M}{(Video MSL)}
-%		\item \href{http://www.youtube.com/watch?v=p-ho4IU30Ac}{(Video MSL landing)}
-	\end{itemize}
-\end{frame}
+%\begin{frame}{AI applications}{Application domains (IV)}
+%	AI in Robotics
+%	\begin{itemize}
+%		\item \href{http://www.youtube.com/watch?v=gDvoe091tk4}{(Video Athlete)}
+%		\item \href{https://www.youtube.com/watch?v=M8YjvHYbZ9w}{(Video Spot)}
+%		\item \href{https://www.youtube.com/watch?v=rVlhMGQgDkY}{(Video Atlas)}
+%		\item \href{https://www.youtube.com/watch?v=NhLi1LsNzno}{(Video ExoMars)}
+%		\item \href{http://www.jpl.nasa.gov/news/phoenix/multimedia.php}{(MSL Photos)}
+%%		\item \href{http://www.jpl.nasa.gov/news/phoenix/multimedia.php}{(Video MSL)}
+%%		\item \href{http://www.youtube.com/watch?v=JI6F1qrsQb0}{(Video MER)}
+%%		\item \href{http://www.youtube.com/watch?v=j72quVM7c9Y}{(Video Phoenix)}
+%%		\item \href{http://www.youtube.com/watch?v=d1coV7XqE1M}{(Video MSL)}
+%%		\item \href{http://www.youtube.com/watch?v=p-ho4IU30Ac}{(Video MSL landing)}
+%	\end{itemize}
+%\end{frame}
 
 
 \IfStrEq{\modo}{mcyte}{
