--- a/ea/ea.tex
+++ b/ea/ea.tex
@@ -1003,5 +1003,54 @@
 	$(\mu, \lambda)$ selection is more popular
 \end{frame}
 
+\section{Working with an Evolutionary Algorithm}
+\subsection{Search phases}
+\begin{frame}{Working with an Evolutionary Algorithm}{Search phases}
+    \begin{columns}
+ 	   \column{.70\textwidth}
+	   \textbf{Initial phase}: Random distribution, high genetic diversity\\
+	   \textbf{Advanced phase}: Begins to converge\\
+	   \textbf{Convergence}: Around one or few points, low genetic diversity\\
+	   \bigskip
+	   Premature convergence if population not located in global maxima
+ 	   \column{.30\textwidth}
+		\includegraphics[width=\linewidth]{figs/fases.png}\\
+		\centering\href{https://upload.wikimedia.org/wikipedia/commons/f/fe/Visualization\_of\_a\_population\_evolving\_in\_a\_static\_fitness\_landscape.gif}{(Animation)}
+	\end{columns}
+\end{frame}
+
+\subsection{Fitness dynamics}
+\begin{frame}{Working with an Evolutionary Algorithm}{Fitness dynamics}
+    \begin{columns}
+ 	   \column{.50\textwidth}
+		\includegraphics[width=\linewidth]{figs/fitness.eps}
+ 	   \column{.50\textwidth}
+		\includegraphics[width=\linewidth]{figs/fitness-k2.eps}
+	\end{columns}
+	Few long runs or many short runs?
+\end{frame}
+
+\subsection{When  EAs are useful}
+\begin{frame}{Working with an Evolutionary Algorithm}{When EAs are useful}
+    \begin{columns}
+ 	   \column{.70\textwidth}
+		\includegraphics[width=\linewidth]{figs/problems.eps}
+	\end{columns}
+\end{frame}
+
+\subsection{Advanced EAs}
+\begin{frame}{Working with an Evolutionary Algorithm}{Advanced EAs}
+	\begin{itemize}
+	\item Multiobjective Evolutionary Algorithms (MOEAs)
+	\item Optimization with constrains
+	\item Coevolution
+	\item Dinamic optimization
+	\item Islands models
+	\item Memetic algorithms
+	\item Hyperheuristics
+	\end{itemize}
+\end{frame}
+
+
 
 \end{document}
