--- a/search/search.tex
+++ b/search/search.tex
@@ -822,7 +822,7 @@ Optimal   & Yes$^*$ & Yes & No & No & Yes$^*$ \\
         \item Design multiple missions
     \end{itemize}
     \href{https://www.youtube.com/watch?v=zvxZx-QnqQ0}{(Video)}
-    \href{https://www.youtube.com/watch?v=5CQNG6OIbZM}{(Suggested video)}
+    \href{https://www.youtube.com/watch?v=5CQNG6OIbZM}{(Solution)}
 \end{frame}
 
 \subsection{Case study III: Mars orbital insertion}
