EA fitness evolution example added

--- a/ecintro/ecintro.tex
+++ b/ecintro/ecintro.tex
@@ -551,7 +551,15 @@
 	\end{center}
 \end{frame}
 
-\begin{frame}{Evolutionary Algorithms}{Basics (III)}
+\begin{frame}{Evolutionary Algorithms}{Basics (III)} 
+		Typical fitness behaviour
+
+		\begin{center}
+		\includegraphics[width=0.7\linewidth]{figs/fitness.png}\\
+		\end{center}
+\end{frame}
+
+\begin{frame}{Evolutionary Algorithms}{Basics (IV)}
 	Initialization is usually random
 	\begin{itemize}
 		\item Random population
