EA fitness evolution example added

--- a/ecintro/ecintro.tex
+++ b/ecintro/ecintro.tex
@@ -551,15 +551,7 @@
 	\end{center}
 \end{frame}
 
-\begin{frame}{Evolutionary Algorithms}{Basics (III)} 
-		Typical fitness behaviour
-
-		\begin{center}
-		\includegraphics[width=0.7\linewidth]{figs/fitness.png}\\
-		\end{center}
-\end{frame}
-
-\begin{frame}{Evolutionary Algorithms}{Basics (IV)}
+\begin{frame}{Evolutionary Algorithms}{Basics (III)}
 	Initialization is usually random
 	\begin{itemize}
 		\item Random population
@@ -592,6 +584,20 @@
 		\item Performed, mostly, by crossover
 		\end{itemize}
 \end{frame}
+
+\subsection{Fitness evolution}
+
+\begin{frame}{Evolutionary Algorithms}{Fitness evolution} 
+	Typical fitness behaviour
+    \vspace{-0.3cm}
+	\begin{center}
+	\includegraphics[width=0.7\linewidth]{figs/fitness.png}\\
+	\end{center}
+
+    \vspace{-0.3cm}
+	\href{http://rednuht.org/genetic\_cars\_2/} {(Car design)}
+\end{frame}
+
 
 \section{EAs components}
 \subsection{Components of an EA}
@@ -820,7 +826,6 @@
 
 \begin{frame}{EAs examples}
 	\begin{itemize}
-		\item \href{http://rednuht.org/genetic\_cars\_2/} {(Car design)}
 		\item \href{http://rednuht.org/genetic\_walkers/} {(Genetic Algorithm Walkers)}
 		\item \href{http://www.blprnt.com/smartrockets/}{(Smart rockets)}
 		\item \href{https://www.youtube.com/watch?v=xcIBoPuNIiw}{(Learn to walk)}
